--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@fastify/swagger": "^8.10.0",
     "@fastify/swagger-ui": "^1.9.3",
     "amqplib": "^0.10.4",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.27.0",
     "fastify-plugin": "^4.5.1",
     "file-stream-rotator": "^1.0.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "fs-extra": "^11.1.1",
     "node-cache": "^5.1.2",
     "sequelize": "^6.33.0",
