--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.27.0",
+    "fastify-jwt": "^4.2.0",
     "fastify-plugin": "^4.5.1",
     "file-stream-rotator": "^1.0.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "fs-extra": "^11.1.1",
     "node-cache": "^5.1.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
     "yarn": "^1.22.22"
   },
