--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fastify/swagger-ui": "^1.9.3",
     "amqplib": "^0.10.4",
     "bcryptjs": "^2.4.3",
+    "cron": "^3.1.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.27.0",
