--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-stream-rotator": "^1.0.0",
     "fs-extra": "^11.1.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.15",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
