--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fastify/static": "^6.11.0",
     "@fastify/swagger": "^8.10.0",
     "@fastify/swagger-ui": "^1.9.3",
+    "ajv": "^8.17.1",
+    "ajv-errors": "^3.0.0",
     "amqplib": "^0.10.4",
     "bcryptjs": "^2.4.3",
     "cron": "^3.1.7",
