--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cron": "^3.1.7",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.13.4",
@@ -48,6 +49,8 @@
     "qrcode": "^1.5.4",
     "sequelize": "^6.33.0",
     "tronweb": "^6.0.0",
+    "twilio": "^5.4.0",
+    "uuid": "^11.0.3",
     "web3": "^4.15.0",
     "yarn": "^1.22.22"
   },
