--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "qrcode": "^1.5.4",
     "sequelize": "^6.33.0",
     "tronweb": "^6.0.0",
+    "twilio": "^5.4.0",
     "web3": "^4.15.0",
     "yarn": "^1.22.22"
   },
