--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.4",
+    "razorpay": "^2.9.5",
     "sequelize": "^6.33.0",
     "tronweb": "^6.0.0",
     "twilio": "^5.4.0",
