--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.5",
     "sequelize": "^6.33.0",
+    "socks-proxy-agent": "^8.0.5",
     "tronweb": "^6.0.0",
     "twilio": "^5.4.0",
     "uuid": "^11.0.3",
