--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
     "amqplib": "^0.10.4",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cron": "^3.1.7",
