--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-stream-rotator": "^1.0.0",
     "fs-extra": "^11.1.1",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
